...
    onOrderChange: (NoteOrder) -> Unit // sets the new order selected
) {
    // first 3
    Column(modifier = modifier) {
        Row(modifier = Modifier.fillMaxWidth()) {
            DefaultRadioButton(
                text = "Title",
                selected = noteOrder is NoteOrder.Title,
                onSelect = {
                    onOrderChange(NoteOrder.Title(noteOrder.orderType))
                }
                // changes the noteOrder but keeps the same order type
            )
...
                onSelect = {
                    onOrderChange(noteOrder.copy(orderType = OrderType.Ascending))
                }
            )
            Spacer(modifier = Modifier.width(8.dp))
            DefaultRadioButton(
                text = "Descending",
                selected = noteOrder.orderType is OrderType.Descending,
                onSelect = {
                    onOrderChange(noteOrder.copy(orderType = OrderType.Descending))
                }
            )
        }
...
