...
            FloatingActionButton(
                onClick = {
                    routeToNavigate.invoke(Screen.AddEditNoteScreen.route)
                },
                backgroundColor = MaterialTheme.colors.primary
            ) {
                Icon(imageVector = Icons.Default.Add, contentDescription = "Add note") // always use constants
            }
        },
        scaffoldState = scaffoldState
    ) { paddingValues ->
        Column(
            modifier = Modifier
...
                    onClick = {
                        eventToTrigger.invoke(NotesEvent.ToggleOrderSection)
                    },
                ) {
                    Icon(
                        imageVector = Icons.Default.Sort,
                        contentDescription = "Sort"
                    )
                }
            }
            // triggered by the icon button above
            // and how the animation is shown
            AnimatedVisibility(
...
