...
            FloatingActionButton(
                onClick = {
                    eventToTrigger.invoke(AddEditNoteEvent.SaveNote)
                },
                backgroundColor = MaterialTheme.colors.primary
            ) {
                Icon(imageVector = Icons.Default.Save, contentDescription = "Save note") // always use constants
            }
        },
        scaffoldState = scaffoldState
    ) { scaffoldPadding ->
        Column(
            modifier = Modifier
...
